selfhost/test/typechecker/invocation/generics_error_type_mismatch.out
Error at %FILE_NAME%:3:18
Type mismatch for parameter 't2'
  |  val _ = foo(123, "abc")
                      ^
Expected: Int
but instead found: String
